Everything minus introduction, conclusion and time integration.

--- a/Thermomechanics.bib
+++ b/Thermomechanics.bib
@@ -37,6 +37,24 @@
 	file = {agelet_de_saracibar_1998_numerical_analysis_of_coupled_thermomechanical_frictional_contact_problems.pdf:/home/jose/Zotero/storage/LH4F6RI4/agelet_de_saracibar_1998_numerical_analysis_of_coupled_thermomechanical_frictional_contact_problems.pdf:application/pdf;De Saracibar - 1998 - Numerical analysis of coupled thermomechanical fri.pdf:/home/jose/Zotero/storage/GERK99AQ/De Saracibar - 1998 - Numerical analysis of coupled thermomechanical fri.pdf:application/pdf;De Saracibar - 1998 - Numerical analysis of coupled thermomechanical fri.pdf:/home/jose/Zotero/storage/UEX3WT24/De Saracibar - 1998 - Numerical analysis of coupled thermomechanical fri.pdf:application/pdf},
 }
 
+@book{ghadiani2005multiphasic,
+  title={A multiphasic continuum mechanical model for design investigations of an effusion-cooled rocket thrust chamber},
+  author={Ghadiani, Saeed Reza},
+  year={2005}
+}
+
+@book{cengel_thermodynamics_2011,
+	series = {Cengel series in engineering thermal-fluid sciences},
+	title = {Thermodynamics: {An} {Engineering} {Approach}},
+	isbn = {978-0-07-131111-3},
+	url = {https://books.google.pt/books?id=bkIscAAACAAJ},
+	publisher = {McGraw-Hill},
+	author = {{\c C}engel, Y.A. and Boles, M.A.},
+	year = {2011},
+	lccn = {2009040824},
+}
+
+
 @book{de_souza_neto_computational_2008,
 	title = {Computational {Methods} for {Plasticity}: {Theory} and {Applications}},
 	isbn = {978-0-470-69452-7},
@@ -3589,4 +3607,20 @@ publisher: Elsevier},
 	note = {Series Title: Solid Mechanics and its Applications},
 	pages = {427--474},
 	file = {Ibrahimbegovic2009_Chapter_ThermodynamicsAndSolutionMetho.pdf:/home/jose/Zotero/storage/9I7KL8IR/Ibrahimbegovic2009_Chapter_ThermodynamicsAndSolutionMetho.pdf:application/pdf},
+}
+
+@techreport{DINEN1991_1_2,
+type = {Standard},
+key = {DIN EN 1991-1-2/NA:2010-12: Anhang CC},
+year = {1991},
+title = {{Prüfung und Validierung von Rechenprogramm für Brandschutznachweise mittels allgemeiner Rechenverfahren}},
+address = {Berlin, Germany},
+institution = {German Institute for Standardization}
+}
+
+@techreport{NAFEMSbenchmarks,
+type= {Publication},
+key = {The Standard NAFEMS benchmarks},
+title = {{NAFEMS P18}},
+institution = {NAFEMS}
 }
