--- a/validation_thermal_solver.tex
+++ b/validation_thermal_solver.tex
@@ -1,7 +1,7 @@
 \chapter{Validation results for the thermal solver}
 
 This chapter provides validation results for the thermal solver implemented in this work.
-The appropriate examples are sourced from DIN EN 1991-1-2/NA:2010-12: Anhang CC - Prüfung und  Validierung von Rechenprogramm für Brand\-schutz\-nach\-weise mittels allgemeiner Rechenverfahren \cite{} and the linear thermo-elastic test in the standard NAFEMS benchmarks \cite{}.
+The appropriate examples are sourced from \cite{DINEN1991_1_2}  - Prüfung und  Validierung von Rechenprogramm für Brand\-schutz\-nach\-weise mittels allgemeiner Rechenverfahren  and the linear thermo-elastic test in the \cite{NAFEMSbenchmarks}.
 They include thermal effects such as variable conductivity, heat convection and radiation at the boundary.
 The numerical solutions are obtained using the thermal solver in LINKS, employing TRI3, TRI6, QUAD4, QUAD8 elements, in two-dimensions, and TETRA4 and TETRA10 elements in three-dimensions.
 No convergence study was performed, however the mesh size was chosen small enough so that assuming convergence of the FEM solution is reasonable.
@@ -13,7 +13,7 @@ Moreover the good agreement with reference solutions supports this assumption.
 
 The geometry examined is a square plate with side length equal to \SI{1}{\meter}, as shown in Figure~\ref{fig:din_example_1_plate}.
 The boundary conditions considered are as follows: the left, upper and right edges are assumed to be adiabatic.
-At the lower edge there is heat transfer by convection with a heat convection coefficient \(h\) equation to \SI{1}{\watt\meter^{-2}\kelvin^{-1}} and an environment temperature equal to \SI{0}{\celsius} (see Equation~\ref{link to heat convection equation}).
+At the lower edge there is heat transfer by convection with a heat convection coefficient \(h_c\) equation to \SI{1}{\watt\meter^{-2}\kelvin^{-1}} and an environment temperature equal to \SI{0}{\celsius} (see Equation~\ref{eq:heat_convection}).
 The initial temperature for the entire plate is \SI{1000}{\celsius}.
 Reference values for the temperature at the middle of the upper edge are supplied to determine performance.
 The relevant properties of the material making up the plate are its conductivity \(k\), equal to \SI{1}{\watt\meter^{-1}\kelvin^{-1}}, its specific heat \(c_p\), equal to \SI{1}{\joule\kilo\gram^{-1}\kelvin^{-1}}, and its density \(\rho\), set equal to \SI{1000}{\kilo\gram\meter^{-3}}.
@@ -21,7 +21,7 @@ Table~\ref{tab:din_example_1_description} summarizes all the information regardi
 
 \begin{figure}[htbp]
   \includegraphics[width=0.8\textwidth]{din_example_1_plate.png}
-  \caption{Geometry and boundary conditions considered in the validation example 1.}
+  \caption{Geometry and boundary conditions considered in the validation example 1 \citep{DINEN1991_1_2}.}
 \label{fig:din_example_1_plate}
 \end{figure}
 
@@ -29,23 +29,23 @@ Table~\ref{tab:din_example_1_description} summarizes all the information regardi
   \centering
   \caption{Material properties, and initial and boundary conditions for validation example 1.}
   \label{tab:din_example_1_description}
-  \begin{tabular}{ccS}
-  \multicolumn{2}{c}{Material Properties} & {\vphantom{\Big |}Effective value}\\
+  \begin{tabular}{lccS[exponent-mode=engineering]}
+  \multicolumn{3}{c}{Material Properties} & {\vphantom{\Big |}Effective value}\\
   \hline\hline
-  \vphantom{\Big |}Conductivity \(k\) & (\si{\watt\meter^{-1}\kelvin^{-1}}) & 1\\
-  Specific heat \(c_p\) & (\si{\joule\per\kilo\gram\per\kelvin}) & 1\\
-  Density \(\rho\) & (\si{\kilo\gram\per\meter^{3}}) & 1000\\
+  \vphantom{\Big |}Conductivity & \(k\) & (\si{\watt\meter^{-1}\kelvin^{-1}}) & 1\\
+  \vphantom{\Big |}Specific heat & \(c_p\) & (\si{\joule\per\kilo\gram\per\kelvin}) & 1\\
+  \vphantom{\Big |}Density & \(\rho\) & (\si{\kilo\gram\per\meter^{3}}) & 1000\\
   \hline
-  \multicolumn{2}{c}{Boundary Conditions\vphantom{\Big |}} & \\\hline
-  \vphantom{\Big |}Dimensions \(h\), \(b\) & (\si{\meter}) & 1\\
-  Heat convection coefficient \(h\) & (\si{\watt\per\meter^2\per\kelvin}) & 1\\
+  \multicolumn{3}{c}{Boundary Conditions\vphantom{\Big |}} & \\\hline
+  \vphantom{\Big |}Dimensions & \(h\), \(b\) & (\si{\meter}) & 1\\
+  \vphantom{\Big |}Heat convection coefficient & \(h_c\) & (\si{\watt\per\meter^2\per\kelvin}) & 1\\
   \hline
-  \multicolumn{2}{c}{Initial Conditions\vphantom{\Big |}} & \\\hline
-  \vphantom{\Big |}Ambient temperature \(T_\text{env}\) & (\si{\celsius}) & 0\\
-  Temperature in cross-section & (\si{\celsius}) & 1000\\
+  \multicolumn{3}{c}{Initial Conditions\vphantom{\Big |}} & \\\hline
+  \vphantom{\Big |}Ambient temperature & \(T_\infty\) & (\si{\celsius}) & 0\\
+  \vphantom{\Big |}Temperature in cross-section & \(T_0\) & (\si{\celsius}) & 1000\\
   \hline
-  \multicolumn{2}{c}{Reference value \vphantom{\Big |}} & \\\hline
-  \vphantom{\Big |}Temperature \(T_0\) in point \(X\) & (\si{\celsius}) & \\
+  \multicolumn{3}{c}{Reference value \vphantom{\Big |}} & \\\hline
+  \vphantom{\Big |}Temperature \(T\) at point \(X\) & (\si{\celsius}) & \\
   \hline\hline
   \end{tabular}
 \end{table}
@@ -147,7 +147,7 @@ The evolution of the temperature field depicted seems reasonable given the descr
      \subfloat[][$t=\SI{1800}{\second}$]{
     \includegraphics[width=0.5\columnwidth]{DIN_example_1_TRI3_t_1800.png}
             \label{fig:DIN_example_1_TRI3_t_60}}
-    \caption{Numerical results for the validation example 1 using a TRI3 mesh.}
+    \caption{Numerical results regarding the evolution of the temperature distribution for the validation example 1 using a TRI3 mesh.}
     \label{fig:DIN_example_1_TRI3}
 \end{figure}
 
@@ -156,17 +156,17 @@ The evolution of the temperature field depicted seems reasonable given the descr
 \subsection{Description}
 
 The geometry examined is a square plate with side length equal to \SI{0.2}{\meter}, as shown in Figure~\ref{fig:din_example_2_plate}.
-There is heat transfer by convection along all the edges with a heat convection coefficient \(h\) equation to \SI{10}{\watt\meter^{-2}\kelvin^{-1}} and an environment temperature equal to \SI{1000}{\celsius} (see Equation~\ref{link to heat convection equation}).
+There is heat transfer by convection along all the edges with a heat convection coefficient \(h_c\) equation to \SI{10}{\watt\meter^{-2}\kelvin^{-1}} and an environment temperature equal to \SI{1000}{\celsius} (see Equation~\ref{eq:heat_convection}).
 Thre is also heat transfer through radition, with the emissivity \(\varepsilon_\text{res}\) equal to 0.8.
 The initial temperature for the entire plate is \SI{0}{\celsius}.
 Reference values for the temperature in the middle of the plate are supplied to determine performance.
-The relevant properties of the material making up the plate are its conductivity \(k\), which follows a linear behavior (see Table~\ref{}), its specific heat \(c_p\), equal to \SI{1000}{\joule\kilo\gram^{-1}\kelvin^{-1}}, and its density \(\rho\), set equal to \SI{2400}{\kilo\gram\meter^{-3}}.
+The relevant properties of the material making up the plate are its conductivity \(k\), which follows a linear behavior (see Table~\ref{tab:din_example_2_description}), its specific heat \(c_p\), equal to \SI{1000}{\joule\kilo\gram^{-1}\kelvin^{-1}}, and its density \(\rho\), set equal to \SI{2400}{\kilo\gram\meter^{-3}}.
 Table~\ref{tab:din_example_2_description} summarizes all the information regarding initial and boundary conditions, geometry and material properties.
 
 \begin{figure}
   \centering
   \includegraphics[width=0.55\textwidth]{din_example_2_plate.png}
-  \caption{Geometry and boundary conditions considered in the validation example 2.}
+  \caption{Geometry and boundary conditions considered in the validation example 2. \citep{DINEN1991_1_2}}
 \label{fig:din_example_2_plate}
 \end{figure}
 
@@ -174,27 +174,27 @@ Table~\ref{tab:din_example_2_description} summarizes all the information regardi
   \centering
   \caption{Material properties, and initial and boundary conditions for validation example 2.}
   \label{tab:din_example_2_description}
-  \begin{tabular}{ccSS}
-  \multicolumn{2}{c}{Material Properties} & \multicolumn{2}{c}{\vphantom{\Big |}Effective value}\\
+  \begin{tabular}{lccSS}
+  \multicolumn{3}{c}{Material Properties} & \multicolumn{2}{c}{\vphantom{\Big |}Effective value}\\
   \hline\hline
-  \multirow{4}{*}{\makecell{Conductivity \(k\)\\(Linear behavior)}} & \multirow{4}{*}{(\si{\watt\per\meter\per\kelvin})} & {\(T\)} & {\(\lambda(T)\)}\\\cline{3-4}
-  & & 0 & 1.5\\
-  & & 200 & 0.7\\
-  & & 1000 & 0.5\\
-  Specific heat \(c_p\) & (\si{\joule\per\kilo\gram\per\kelvin}) & \multicolumn{2}{c}{1000}\\
-  Density \(\rho\) & (\si{\kilo\gram\per\meter^{3}}) & \multicolumn{2}{c}{2400}\\
+  \multirow{4}{*}{\makecell{Conductivity \\(Linear behavior)}} &  \multirow{4}{*}{\(k\)} & \multirow{4}{*}{(\si{\watt\per\meter\per\kelvin})} & {\(T\)} & {\(\lambda(T)\)}\\\cline{4-5}
+  & & & 0 & 1.5\\
+  & & & 200 & 0.7\\
+  & & & 1000 & 0.5\\
+  \vphantom{\Big |} Specific heat & \(c_p\) & (\si{\joule\per\kilo\gram\per\kelvin}) & \multicolumn{2}{c}{1000}\\
+  \vphantom{\Big |} Density & \(\rho\) & (\si{\kilo\gram\per\meter^{3}}) & \multicolumn{2}{c}{2400}\\
   \hline
-  \multicolumn{2}{c}{Boundary Conditions\vphantom{\Big |}} & \\\hline
-  \vphantom{\Big |}Dimensions \(h\), \(b\) & (\si{\meter}) & \multicolumn{2}{c}{0.2}\\
-  Heat convection coefficient \(h\) & (\si{\watt\per\meter^2\per\kelvin}) & \multicolumn{2}{c}{10}\\
-  Emissivity \(\varepsilon_\text{res}\) &  & \multicolumn{2}{c}{0.8}\\
+  \multicolumn{3}{c}{Boundary Conditions\vphantom{\Big |}} & \\\hline
+  \vphantom{\Big |}Dimensions & \(h\), \(b\) & (\si{\meter}) & \multicolumn{2}{c}{0.2}\\
+  \vphantom{\Big |}Heat convection coefficient & \(h_c\) & (\si{\watt\per\meter^2\per\kelvin}) & \multicolumn{2}{c}{10}\\
+  \vphantom{\Big |}Emissivity & \(\varepsilon_\text{res}\) &  & \multicolumn{2}{c}{0.8}\\
   \hline
-  \multicolumn{2}{c}{Initial Conditions\vphantom{\Big |}} & \\\hline
-  \vphantom{\Big |}Ambient temperature \(T_\text{env}\) & (\si{\celsius}) & \multicolumn{2}{c}{1000}\\
-  Temperature in cross-section & (\si{\celsius}) & \multicolumn{2}{c}{0}\\
+  \multicolumn{3}{c}{Initial Conditions\vphantom{\Big |}} & \\\hline
+  \vphantom{\Big |}Ambient temperature & \(T_\infty\) & (\si{\celsius}) & \multicolumn{2}{c}{1000}\\
+  \vphantom{\Big |}Temperature in cross-section & \(T_0\) & (\si{\celsius}) & \multicolumn{2}{c}{0}\\
   \hline
-  \multicolumn{2}{c}{Reference value \vphantom{\Big |}} & \\\hline
-  \vphantom{\Big |}Temperature \(T_0\) in point \(X\) & (\si{\celsius}) & \\
+  \multicolumn{3}{c}{Reference value \vphantom{\Big |}} & \\\hline
+  \vphantom{\Big |}Temperature \(T_0\) in point \(X\) & & (\si{\celsius}) & \\
   \hline\hline
   \end{tabular}
 \end{table}
@@ -278,7 +278,7 @@ The evolution of the temperature field depicted seems reasonable given the descr
      \subfloat[][]{
     \includegraphics[width=0.5\columnwidth]{example_2_comparison_relative_error.pdf}
             \label{fig:example_2_comparison_relative_error}}
-    \caption{Numerical results for the validation example 2. (a) Temperature values at \(X\) as a function of time. (b) Relative error in percentage as function of time.}
+    \caption{Numerical results regarding the evolution of the temperature distribution for the validation example 2. (a) Temperature values at \(X\) as a function of time. (b) Relative error in percentage as function of time.}
     \label{fig:dim_example_2_comparison}
 \end{figure}
 
@@ -306,7 +306,7 @@ The geometry examined is a rectangular plate with width equal to \SI{0.6}{\meter
 A corresponding three-dimensional geometry is also considered with a thickness equal to \SI{1}{\meter}.
 The boundary conditions considered are as follows: the left edge is assumed to be adiabatic.
 At the lower edge the temperature is prescribed to be \SI{100}{\celsius} and along the upper and right edges there is heat transfer by convection and radiation.
-The heat convection coefficient \(h\) is equal to \SI{70}{\watt\meter^{-2}\kelvin^{-1}}, and the ambient temperature is equal to \SI{0}{\celsius} (see Equation~\ref{link to heat convection equation}).
+The heat convection coefficient \(h\) is equal to \SI{70}{\watt\meter^{-2}\kelvin^{-1}}, and the ambient temperature is equal to \SI{0}{\celsius} (see Equation~\ref{eq:heat_convection}).
 The initial temperature for the entire plate is \SI{0}{\celsius}.
 The relevant properties of the material making up the plate are its conductivity \(k\), equal to \SI{52}{\watt\meter^{-1}\kelvin^{-1}}, its specific heat \(c_p\), equal to \SI{1}{\joule\kilo\gram^{-1}\kelvin^{-1}}, and its density \(\rho\), set equal to \SI{1}{\kilo\gram\meter^{-3}}.
 Table~\ref{tab:nafems_example_description} summarizes all the information regarding initial and boundary conditions, geometry and material properties.
@@ -316,7 +316,7 @@ The expected temperature at E (see Figure~\ref{fig:nafems_example_plate}) is \SI
 \begin{figure}
   \centering
   \includegraphics[width=0.55\textwidth]{nafems_example_plate.png}
-  \caption{Geometry and boundary conditions considered in the validation example 3.}
+  \caption{Geometry and boundary conditions considered in the validation example 3 \citep{NAFEMSbenchmarks}.}
 \label{fig:nafems_example_plate}
 \end{figure}
 
@@ -324,32 +324,32 @@ The expected temperature at E (see Figure~\ref{fig:nafems_example_plate}) is \SI
   \centering
   \caption{Material properties, and initial and boundary conditions for validation example 3.}
   \label{tab:nafems_example_description}
-  \begin{tabular}{ccS}
-  \multicolumn{2}{c}{Material Properties} & {\vphantom{\Big |}Effective value}\\
+  \begin{tabular}{lccS}
+  \multicolumn{3}{c}{Material Properties} & {\vphantom{\Big |}Effective value}\\
   \hline\hline
-  \vphantom{\Big |}Conductivity \(k\) & (\si{\watt\meter^{-1}\kelvin^{-1}}) & 52\\
-  Specific heat \(c_p\) & (\si{\joule\per\kilo\gram\per\kelvin}) & 1\\
-  Density \(\rho\) & (\si{\kilo\gram\per\meter^{3}}) & 1\\
+  \vphantom{\Big |}Conductivity & \(k\) & (\si{\watt\meter^{-1}\kelvin^{-1}}) & 52\\
+  \vphantom{\Big |}Specific heat & \(c_p\) & (\si{\joule\per\kilo\gram\per\kelvin}) & 1\\
+  \vphantom{\Big |}Density & \(\rho\) & (\si{\kilo\gram\per\meter^{3}}) & 1\\
   \hline
-  \multicolumn{2}{c}{Boundary Conditions\vphantom{\Big |}} & \\\hline
-  \vphantom{\Big |}Dimension \(h\) & (\si{\meter}) & 1\\
-  \vphantom{\Big |}Dimension \(b\) & (\si{\meter}) & 0.6\\
-  \vphantom{\Big |}Thickness \(t\) & (\si{\meter}) & 1\\
-  Heat convection coefficient \(h\) & (\si{\watt\per\meter^2\per\kelvin}) & 70\\
+  \multicolumn{3}{c}{Boundary Conditions\vphantom{\Big |}} & \\\hline
+  \vphantom{\Big |}Dimension & \(h\) & (\si{\meter}) & 1\\
+  \vphantom{\Big |}Dimension & \(b\) & (\si{\meter}) & 0.6\\
+  \vphantom{\Big |}Thickness & \(t\) & (\si{\meter}) & 1\\
+  Heat convection coefficient & \(h_c\) & (\si{\watt\per\meter^2\per\kelvin}) & 70\\
   \hline
-  \multicolumn{2}{c}{Initial Conditions\vphantom{\Big |}} & \\\hline
-  \vphantom{\Big |}Ambient temperature \(T_\text{env}\) & (\si{\celsius}) & 100\\
-  Temperature in cross-section & (\si{\celsius}) & 0\\
+  \multicolumn{3}{c}{Initial Conditions\vphantom{\Big |}} & \\\hline
+  \vphantom{\Big |}Ambient temperature & \(T_\infty\) & (\si{\celsius}) & 100\\
+  \vphantom{\Big |}Temperature in cross-section & \(T_0\) & (\si{\celsius}) & 0\\
   \hline
-  \multicolumn{2}{c}{Reference value \vphantom{\Big |}} & \\\hline
-  \vphantom{\Big |}Temperature \(T_0\) at point \(E\) & (\si{\celsius}) & \\
+  \multicolumn{3}{c}{Reference value \vphantom{\Big |}} & \\\hline
+  \vphantom{\Big |}Temperature \(T_0\) at point \(E\) & & (\si{\celsius}) & \\
   \hline\hline
   \end{tabular}
 \end{table}
 
 \subsection{Results}
 
-The numerical solutions obtained using FEM are presented in Table~\ref{tab:nafems_example_comparison_table_2d} for two dimensions and in Table~\ref{nafems_example_comparison_table_3d} for three-dimensions, as well as, the reference values and the corresponding relative difference.
+The numerical solutions obtained using FEM are presented in Table~\ref{tab:nafems_example_comparison_table_2d} for two dimensions and in Table~\ref{tab:nafems_example_comparison_table_3d} for three-dimensions, as well as, the reference values and the corresponding relative difference.
 It can be seen that that agreement between the numerical results and the reference solutions is acceptable.
 It is below 1\% for all elements employed, except for the TETRA4 element.
 There is no significant difference between the two integrators tested.
@@ -409,6 +409,6 @@ Figure~\ref{fig:NAFEMS_example_comparison} shows the temperature distribution ob
    \label{fig:tri3_alpha}}
    \subfloat[][]{ \includegraphics[width=0.5\columnwidth]{tetra10_alpha.png}
    \label{fig:tetra10_alpha}}
-  \caption{}
+  \caption{Temperature distribution concercing the validation example 3: (a) in two-dimensions (TRI6) (b) in three-dimensions (TETRA4).}
 \label{fig:NAFEMS_example_comparison}
 \end{figure}
